// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ModeButton when default value is different from mode 1`] = `
<div
  className="ReactForm"
>
  <div
    className="FormInput"
  >
    <div
      className="FormError"
      style={
        Object {
          "display": "none",
        }
      }
    >
      
    </div>
    <radiogroup>
      <label
        className="modeButton"
        title="Request rides"
      >
        <input
          checked={true}
          className="input"
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          type="radio"
        />
        <div
          className="button request"
        >
          <svg />
        </div>
      </label>
    </radiogroup>
  </div>
</div>
`;

exports[`ModeButton when default value matches mode 1`] = `
<div
  className="ReactForm"
>
  <div
    className="FormInput"
  >
    <div
      className="FormError"
      style={
        Object {
          "display": "none",
        }
      }
    >
      
    </div>
    <radiogroup>
      <label
        className="modeButton"
        title="Offer rides"
      >
        <input
          checked={false}
          className="input"
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          type="radio"
        />
        <div
          className="button offer"
        >
          <svg />
        </div>
      </label>
    </radiogroup>
  </div>
</div>
`;

exports[`ModeButton without a default value 1`] = `
<div
  className="ReactForm"
>
  <div
    className="FormInput"
  >
    <div
      className="FormError"
      style={
        Object {
          "display": "none",
        }
      }
    >
      
    </div>
    <radiogroup>
      <label
        className="modeButton"
        title="Request rides"
      >
        <input
          checked={false}
          className="input"
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          type="radio"
        />
        <div
          className="button request"
        >
          <svg />
        </div>
      </label>
    </radiogroup>
  </div>
</div>
`;
